[package]
name = "meeting_time_finder"
version = "0.1.0"
authors = ["Hamid R. K. Pishghadam <hamidrkp@riseup.net>"]
license = "MIT OR Apache-2.0"
description = "Find free schedule of multiple people with intersectioning their schedues."
repository = "https://github.com/hamidrezakp/meeting_schedue_finder"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
toml = "0.5"
